tests/compile-fail/integration__integration__image_sources__no_source__err_dummy_missing_img_dim.snap
---
source: tests/integration/image_sources.rs
expression: stderr
---
error: missing required field 'img_width' (for image 'subdir/file.png')
  ┌─ <input>:6:15
  │
6 │     has_data: "dummy",
  │               ^^^^^^^ requires setting 'img_width''
  │
  = you can use '-i ANM_FILE' or '-i path/to/patchdir' to copy the image dimensions from an image source


